--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -162,6 +162,12 @@
                 android:text="@string/initial_inning"
                 android:textSize="@dimen/nums2" />
 
+            <TextView
+                style="@style/TextStyle.ColorStyle_2"
+                android:id="@+id/halfText"
+                android:text="@string/top"
+                android:textSize="@dimen/half_text" />
+
             <Button
                 android:id="@+id/reset"
                 style="@style/ButtonStyle"
